# neurometry

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conda-lock.yml  conda.yaml  demo-synthetic-data.ipynb  environment.yml  environment1.yml  explore_latent_place_cells.ipynb  from_matlab.py  models.py  preprocess_place_cells.ipynb  pyproject.toml  requirements.txt  setup_environment.py  train_place_cells.py
.github/workflows/: docs.yml  lint.yml  test.yml
abn/: Untitled-2.ipynb  analysis.ipynb  analyze.py  data_analysis.ipynb  datasets.py  default_config.py  losses.py  main.py  main_eval.ipynb  main_eval.py  main_spherical.py  models.py  neural_metric.py  pullback.py  pullback_metric_testing.ipynb  summary.py  synthetic_curvature.ipynb  train.py
abn/data/: place_cells_labels_expt34_timestep100000.txt  place_cells_labels_expt34_timestep1000000.txt  place_cells_labels_expt48_timestep1000000.txt  place_cells_labels_expt9_timestep1000000.txt
abn/datasets/: cyclic_walk.py  data_loader.py  experimental.py  synthetic.py  utils.py  wiggles.py
abn/distributions/: README.md  hyperspherical_uniform.py  von_mises_fisher.py
abn/hyperspherical_vae/: __init__.py
abn/models/: fc_vae.py  lie_vae.py  regressor.py  spherical_vae.py
abn/new_vae/: default_config.py  losses.py  main.py  newvae.py  testing.ipynb  train.py
abn/notebooks/: explore_processed_experimental_place_cells.ipynb  explore_processed_experimental_place_cells_sas.ipynb  explore_raw_experimental_place_cells.ipynb  gvae_data_analysis.ipynb  main_eval.ipynb  spherical_vae_demo.ipynb  spherical_vae_demo_sas.ipynb  spherical_vae_wiggles.ipynb  vae_data_analysis.ipynb
abn/preprocess/: place_cells.ipynb  utils.py
abn/trainer/: core.py  svae_trainer.py
docs/: conf.py  index.rst
docs/api/: curvature.rst  datasets.rst  dimension.rst  index.rst  topology.rst  warping.rst
neuralgeom/: cyl.ipynb  decode_gain.ipynb  decorators.py  default_config.py  evaluate.py  experimental_analysis.ipynb  explore_place_cells_sanity_check.ipynb  expt_analysis.ipynb  losses.py  main.py  main_eval.py  neural_metric.py  pers_hom.py  persistent_homology.py  plots.py  pullback.ipynb  runs.py  sanity_check.ipynb  sweep.yaml  test_main_eval.py  train.py  visualize_synthetic_manifolds.ipynb  viz.py
neuralgeom/data/: expt_to_first_second_gains.csv  expt_to_ncells.csv  expt_to_ntimes_timestep100000.csv  expt_to_ntimes_timestep1000000.csv
neuralgeom/datasets/: experimental.py  gridcells.ipynb  gridcells.py  structures.py  synthetic.py  utils.py
neuralgeom/models/: fc_vae.py  neural_geom_vae.py  neural_vae.py  toroidal_vae.py
neuralgeom/neuralwarp/: LDDMM.ipynb  hyperbolic.ipynb  requirements.txt  setup.py  warp.ipynb
neuralgeom/notebooks/: 01_explore_raw_experimental_place_cells.ipynb  03_inspect_reconstructed_experimental_place_cells.ipynb  04_inspect_results_in_phase_space.ipynb  05_evaluate_curvature_estimation.ipynb  07_plot_curvature_profile_and_velocity.ipynb  07_plot_neural_manifolds.ipynb  08_remove_outliers.ipynb  09_grid_cells_var_orientation.ipynb  10_persistent_homology.ipynb  11_reparameterization_inv_torus.ipynb  11_reparameterization_invariant_torus.ipynb  12_reparameterization_invariant_circle.ipynb  12_synthetic_place_cells_3neurons.ipynb  13_preprocess_ca1_hippocampus_data.ipynb  13_process_hippocampal_data.ipynb  14_persistent_homology_ca1_hippocampus_data.ipynb  15_decode_ca1_hippocampus_data.ipynb  16_pca_ca1_hippocampus_data.ipynb  17_simulated_place_cells.ipynb  18_xor_geometry.ipynb  1_explore_raw_experimental_place_cells.ipynb  2_explore_binned_experimental_place_cells.ipynb  3_inspect_reconstructed_experimental_place_cells.ipynb  4_inspect_results_in_phase_space.ipynb  5_evaluate_curvature_estimation.ipynb  6_decode_gain_from_curvature.ipynb  7_plot_curvature_profile_and_velocity.ipynb  evaluate_results_across_runs.ipynb  evaluate_results_per_run.ipynb  experimental_analysis.ipynb  explore_processed_experimental_place_cells.ipynb  expt_analysis.ipynb  load_runs.py  setup.py  (+3 more)
neurometry/: __init__.py  decorators.py  torus_neuron_neurons_20_7_.html
notebooks/: 01_explore_raw_experimental_place_cells.ipynb  01_methods_create_synthetic_data.ipynb  02_methods_estimate_manifold_dimension.ipynb  03_inspect_reconstructed_experimental_place_cells.ipynb  03_methods_estimate_manifold_topology.ipynb  04_inspect_results_in_phase_space.ipynb  06_decode_gain_from_curvature.ipynb  07_plot_neural_manifolds.ipynb  09_grid_cells_var_orientation.ipynb  10_application_rnns_grid_cells.ipynb  10_persistent_homology.ipynb  11_application_synthetic_v1.ipynb  11_reparameterization_invariant_torus.ipynb  12_path_int.ipynb  12_reparameterization_invariant_circle.ipynb  12_synthetic_place_cells_3neurons.ipynb  13_synthetic_place_cells_3neurons.ipynb  14_persistent_homology_ca1_hippocampus_data.ipynb  15_decode_ca1_hippocampus_data.ipynb  16_pca_ca1_hippocampus_data.ipynb  18_xor_geometry.ipynb  19_shape_metrics_NSD.ipynb  20_neurometry_ai.ipynb  20_nsd_maps.ipynb  21_cuda_distances.ipynb  21_rnn_grid_cells.ipynb  22_llm_embeddings.ipynb  22_synthetic_manifolds.ipynb  23_dimension_estimation.ipynb  23_load_NSD_8_subjects.ipynb  setup.py  tda.ipynb  test_plot.py
results/: 2022-05-14 15:15:12.231940_model.pt  2022-05-14 15:15:54.883727_model.pt
tests/: test_curvature.py  test_evaluate.py  test_losses.py  test_main_eval.py  test_tutorials.py
tutorials/: 01_methods_create_synthetic_data.ipynb  02_methods_estimate_manifold_dimension.ipynb  03_methods_estimate_manifold_topology.ipynb  04_methods_estimate_manifold_geometry.ipynb  04_methods_estimate_manifold_immersion.ipynb  06_analyze_digital_twin_V4.ipynb  071_application_dual_agent_rnns.ipynb  07_analyze_electrophys_hippocampus.ipynb  08_applications_synthetic_grid_cells.ipynb  09_application_rnns_grid_cells_xu.ipynb  10_methods_estimate_manifold_curvature.ipynb  11_application_synthetic_v1.ipynb  11_visualize_rnn.ipynb  12_application_digitaltwin_v4.ipynb  12_path_int.ipynb  LDDMM.ipynb  hyperbolic.ipynb  load_runs.py  plot_klein_bottle.py  warp.ipynb
(+252 files in other folders)
